# eigroup-reservoir-analytic

./: .gitignore  DAY_01_HANDOFF.md  DAY_02_HANDOFF.md  DAY_03_HANDOFF.md  DAY_04_HANDOFF.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
configs/clustering/: default.yaml
configs/cutoffs/: default.yaml
notebooks/: 01_eda.ipynb
outputs/: dashboard.html
outputs/figures/: 01_kh_heatmap.html  02_kh_stacked_bar.html  03_phit_perm_crossplot.html  04_ntg_sensitivity.html  05_lorenz_curves.html  06_zoneb_clusters_log.html  06_zonec_clusters_log.html  07_zoneb_silhouette.html  07_zonec_silhouette.html  08_zoneb_cross_well_consistency.html  08_zonec_cross_well_consistency.html  09_zone_quality_boxplot.html
outputs/reports/: data_quality.md  executive_summary.md  field_summary_by_well.csv  field_summary_by_zone.csv  field_views.md  interview_prep.md  kh_bootstrap_ci.csv  knee_points_kh.csv  knee_points_ntg.csv  lowo_validation_zoneb_gmm.csv  lowo_validation_zoneb_kmeans.csv  lowo_validation_zonec_gmm.csv  lowo_validation_zonec_kmeans.csv  metrics_per_zone.csv  metrics_per_zone.md  optimal_k_analysis_zoneb.csv  optimal_k_analysis_zonec.csv  part_a_walkthrough.md  part_b_walkthrough.md  part_c_walkthrough.md  part_d_walkthrough.md  sensitivity_analysis.md  subzone_assignments_zoneb_gmm.csv  subzone_assignments_zoneb_kmeans.csv  subzone_assignments_zonec_gmm.csv  subzone_assignments_zonec_kmeans.csv  subzone_centroids_zoneb_kmeans.csv  subzone_centroids_zonec_kmeans.csv  subzone_metrics_zoneb_gmm.csv  subzone_metrics_zoneb_kmeans.csv  subzone_metrics_zonec_gmm.csv  subzone_metrics_zonec_kmeans.csv  (+2 more)
presentation/: eigroup_reservoir_analytics.pptx  slides.md
scripts/: build_architecture_diagram.py  build_dashboard.py  build_slides.py  inspect_charts.py  smoke_test_part_a.py
src/: __init__.py  cli.py
tests/: test_cli.py  test_clustering_views.py  test_field_views.py  test_joiner.py  test_loader.py  test_metrics.py  test_quality.py  test_sensitivity.py  test_subzone.py
(+8 files in other folders)
